@@ -33,6 +33,7 @@ import matplotlib
 import matplotlib.pyplot as plt
 from collections import OrderedDict
 
+from MDAnalysis.lib.util import deprecate
 from ...exceptions import ApplicationError
 from ..base import AnalysisBase
 from ...lib import util
@@ -46,6 +47,9 @@ from .templates import (hole_input, hole_lines, vmd_script_array,
 logger = logging.getLogger(__name__)
 
 
+@deprecate(release="2.6.0", remove="3.0.0",
+           message=("This method has been moved to the MDAKit hole2-mdakit: "
+                    "https://github.com/MDAnalysis/hole2-mdakit"))
 def hole(pdbfile,
          infile_text=None,
          infile=None,
@@ -429,6 +433,11 @@ class HoleAnalysis(AnalysisBase):
         are now stored in a :class:`MDAnalysis.analysis.base.Results`
         instance.
 
+    .. deprecated:: 2.6.0
+       This class has been moved to the MDAKit
+       `hole2-mdakit <https://github.com/MDAnalysis/hole2-mdakit>`_ and will
+       be removed for the core MDAnalysis library in version 3.0
+
     """
 
     input_file = '{prefix}hole{i:03d}.inp'
@@ -478,6 +487,12 @@ class HoleAnalysis(AnalysisBase):
                  write_input_files=False):
         super(HoleAnalysis, self).__init__(universe.universe.trajectory,
                                            verbose=verbose)
+
+        wmsg = ("This class has been moved to the MDAKit `hole2-mdakit` "
+                "(https://github.com/MDAnalysis/hole2-mdakit) and will be "
+                "removed in version 3.0.")
+        warnings.warn(wmsg, DeprecationWarning)
+
         if output_level > 3:
             msg = 'output_level ({}) needs to be < 3 in order to extract a HOLE profile!'
             warnings.warn(msg.format(output_level))
